--- a/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
+++ b/src/app/components/forms/announcement-management-form/announcement-sub-group-form/announcement-sub-group-form.component.html
@@ -2,7 +2,9 @@
 <div class="w-full">
   <app-search-input
     class="w-full"
-    placeholder="بخشی از عنوان زیرگروه وارد کنید."
+    [placeholder]="
+      'عنوان ' + appTitle.getPlaceholder('loadAnnouncementSubGroupTitle')
+    "
     [staticData]="announcementsSubGroup"
     [itemMatchesQuery]="filterAnnouncementsSubGroup"
     [autoTriggerSearch]="true"
@@ -29,14 +31,19 @@
   <!-- Table Header -->
   <ng-template #caption>
     <div>
-      <app-button label="جدید" size="small" styleClass="w-20 md:w-30 py-2" (click)="onNew()"></app-button>
+      <app-button
+        [label]="appTitle.buttons.add.addRecord"
+        size="small"
+        styleClass="w-20 md:w-30 py-2"
+        (click)="onNew()"
+      ></app-button>
     </div>
   </ng-template>
 
   <ng-template #header let-columns>
     <tr>
       @for (col of columns; track $index) {
-      <th>{{ col }}</th>
+        <th>{{ col }}</th>
       }
     </tr>
   </ng-template>
@@ -102,7 +109,7 @@
     <div class="grid grid-cols-12 col-span-12 gap-4">
       <app-text-input
         class="col-span-12"
-        label="کد"
+        [label]="appTitle.inputs.global.id"
         validationField="id"
         addonWidth="5rem"
         [readOnly]="true"
@@ -112,8 +119,8 @@
 
       <app-text-input
         class="col-span-12"
-        label="عنوان"
-        placeholder="عنوان"
+        [label]="appTitle.inputs.global.title"
+        [placeholder]="appTitle.getPlaceholder('globalTitlePlaceholder')"
         validationField="title"
         addonWidth="5rem"
         [control]="AnnouncementSGTitle"
@@ -121,7 +128,7 @@
 
       <div class="flex col-span-12 px-4">
         <app-toggle-switch-input
-          label="وضعیت زیرگروه:"
+          [label]="appTitle.toggleSwitches.status"
           [control]="AnnouncementActive"
           [readonly]="!isFormEditable()"
         />
@@ -130,7 +137,7 @@
 
     <div class="flex col-span-12 justify-end">
       <app-button
-        label="ثبت و ویرایش اطلاعات"
+        [label]="appTitle.buttons.saveAndEdit"
         [disabled]="announcementSubGroupForm.invalid || loading"
         (click)="registerOrEdit()"
       />
