--- a/src/app/components/forms/province-and-city-form/province-and-city-form.component.html
+++ b/src/app/components/forms/province-and-city-form/province-and-city-form.component.html
@@ -3,14 +3,12 @@
   [cols]="['فعال/غیرفعال']"
   [rows]="[['ProvinceName', 'CityTitle']]"
   [enabledSearch]="true"
-  [searchFields]="['ProvinceName','CityTitle']"
+  [searchFields]="['ProvinceName', 'CityTitle']"
   [paginator]="true"
   (onSearch)="searchProvinceAndCity($event)"
   (onTableCheckBoxChange)="onChangeProvinceAndCity($event)"
   parentField="ProvinceActive"
   childField="CityActive"
-  searchPlaceholder="بخشی از نام استان یا شهر را وارد نمایید."
+  [searchPlaceholder]="appTitle.getPlaceholder('provinceAndCitiesTitle')"
   paginatorLocale="fa-IR"
 />
-
-
