--- a/src/app/components/forms/sequential-turns-management-form/relation-of-sequential-turn-to-announcement-sub-groups/relation-of-sequential-turn-to-announcement-sub-groups-form.component.html
+++ b/src/app/components/forms/sequential-turns-management-form/relation-of-sequential-turn-to-announcement-sub-groups/relation-of-sequential-turn-to-announcement-sub-groups-form.component.html
@@ -1,8 +1,8 @@
 <div class="grid grid-cols-12 gap-4 mb-5">
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6"
-    placeholder="صفوف نوبت دهی"
-    label="صفوف نوبت دهی"
+    [label]="appTitle.inputs.sequentialTurns.sequentialTurnTitle"
+    [placeholder]="appTitle.getPlaceholder('sequentialTurnTitle')"
     [control]="sequentialTurnTitle"
     optionLabel="SeqTurnTitle"
     optionValue="SeqTurnTitle"
@@ -17,8 +17,8 @@
 
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6"
-    placeholder="گروه اعلام بار"
-    label="گروه اعلام بار"
+    [label]="appTitle.inputs.loadAnnouncements.loadAnnouncementGroupTitle"
+    [placeholder]="appTitle.getPlaceholder('loadAnnouncementGroupTitle')"
     [control]="announcementGroupTitle"
     optionLabel="AnnouncementTitle"
     optionValue="AnnouncementTitle"
@@ -34,8 +34,8 @@
 
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6"
-    placeholder="زیرگروه اعلام بار"
-    label="زیرگروه اعلام بار"
+    [label]="appTitle.inputs.loadAnnouncements.loadAnnouncementSubGroupTitle"
+    [placeholder]="appTitle.getPlaceholder('loadAnnouncementSubGroupTitle')"
     [control]="announcementSubGroupTitle"
     optionLabel="AnnouncementSGTitle"
     optionValue="AnnouncementSGTitle"
@@ -88,7 +88,7 @@
 <div class="w-full flex justify-end mt-5">
   <app-button
     size="small"
-    label="ثبت"
+    [label]="appTitle.buttons.saveAndEdit"
     styleClass="px-10 py-2"
     (click)="registerRelationAnnouncement()"
     [disabled]="loading || sequentialTurnForm.invalid"
