--- a/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
+++ b/src/app/components/forms/tariffs-manages-form/tariffs-form.component.html
@@ -6,8 +6,8 @@
 >
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6 lg:col-span-4"
-    placeholder="نوع بارگیر"
-    label="نوع بارگیر"
+    [label]="appTitle.inputs.trucks.truckLoader"
+    [placeholder]="'نوع ' + appTitle.getPlaceholder('truckLoader')"
     optionLabel="LoaderTypeTitle"
     optionValue="LoaderTypeTitle"
     (selectSuggestion)="onSelectSearchLoaderType($event)"
@@ -19,8 +19,8 @@
 
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6 lg:col-span-4"
-    placeholder="شهر مبدا"
-    label="شهر مبدا"
+    [label]="appTitle.inputs.provinceAndCities.startCity"
+    [placeholder]="appTitle.getPlaceholder('startCity')"
     [control]="searchSourceCity"
     optionLabel="CityTitle"
     optionValue="CityTitle"
@@ -33,8 +33,8 @@
 
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6 lg:col-span-4"
-    placeholder="شهر مقصد"
-    label="شهر مقصد"
+    [label]="appTitle.inputs.provinceAndCities.endCity"
+    [placeholder]="appTitle.getPlaceholder('endCity')"
     [control]="searchTargetCity"
     optionLabel="CityTitle"
     optionValue="CityTitle"
@@ -47,8 +47,8 @@
 
   <app-search-auto-complete
     class="col-span-12 sm:col-span-6 lg:col-span-4"
-    placeholder="نوع بار"
-    label="نوع بار"
+    [label]="appTitle.inputs.loads.loadType"
+    [placeholder]="appTitle.getPlaceholder('loadType')"
     [control]="searchGoods"
     optionLabel="ProductTitle"
     optionValue="ProductTitle"
@@ -61,7 +61,7 @@
 
   <div class="col-span-12 flex justify-end">
     <app-button
-      label="جستجو"
+      [label]="appTitle.buttons.search"
       severity="info"
       size="small"
       styleClass="px-6 py-1"
@@ -129,8 +129,8 @@
   >
     <app-search-auto-complete
       class="col-span-12"
-      placeholder="نوع بارگیر"
-      label="نوع بارگیر"
+      [label]="appTitle.inputs.trucks.truckLoader"
+      [placeholder]="appTitle.getPlaceholder('truckLoader')"
       optionLabel="LoaderTypeTitle"
       optionValue="LoaderTypeTitle"
       (selectSuggestion)="onSelectLoaderType($event)"
@@ -144,8 +144,8 @@
 
     <app-search-auto-complete
       class="col-span-12"
-      placeholder="شهر مبدا"
-      label="شهر مبدا"
+      [label]="appTitle.inputs.provinceAndCities.startCity"
+      [placeholder]="appTitle.getPlaceholder('startCity')"
       [control]="SourceCityTitle"
       optionLabel="CityTitle"
       optionValue="CityTitle"
@@ -160,8 +160,8 @@
 
     <app-search-auto-complete
       class="col-span-12"
-      placeholder="شهر مقصد"
-      label="شهر مقصد"
+      [label]="appTitle.inputs.provinceAndCities.endCity"
+      [placeholder]="appTitle.getPlaceholder('endCity')"
       [control]="TargetCityTitle"
       optionLabel="CityTitle"
       optionValue="CityTitle"
@@ -176,8 +176,8 @@
 
     <app-search-auto-complete
       class="col-span-12"
-      placeholder="نوع بار"
-      label="نوع بار"
+      [label]="appTitle.inputs.loads.loadType"
+      [placeholder]="appTitle.getPlaceholder('loadType')"
       [control]="GoodTitle"
       optionLabel="ProductTitle"
       optionValue="ProductTitle"
@@ -217,7 +217,7 @@
 
     <app-toggle-switch-input
       class="col-span-12 flex px-3"
-      label="وضعیت"
+      [label]="appTitle.toggleSwitches.status"
       [control]="Active"
       [readonly]="true"
     />
@@ -225,7 +225,7 @@
     <!-- Submit -->
     <div class="col-span-12 flex justify-end mt-4">
       <app-button
-        label="ثبت تغییرات"
+        [label]="appTitle.buttons.saveAndEdit"
         type="submit"
         [disabled]="tariffForm.invalid || loading()"
       />
