--- a/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/resuscitate-time-turns-form/resuscitate-turns-form.component.html
@@ -6,16 +6,16 @@
   />
   <div class="grid grid-cols-12 gap-4 col-span-12 items-center">
     <app-date-picker-input
-      label="تاریخ رزو نوبت"
+      label="تاریخ رزرو نوبت"
       [control]="date"
       addonWidth="8rem"
       datePickerPosition="top"
-      placeholder="تاریخ رزو نوبت"
+      placeholder="تاریخ رزرو نوبت"
       class="col-span-12 md:col-span-6"
     />
     <app-time-picker-input
       [control]="time"
-      label="زمان رزو نوبت"
+      label="زمان رزرو نوبت"
       class="col-span-12 md:col-span-6"
     />
   </div>
