--- a/src/app/components/shared/layout/footer/footer.component.html
+++ b/src/app/components/shared/layout/footer/footer.component.html
@@ -1,5 +1,7 @@
-<div class="flex justify-center card bg-primary text-primary-contrast">
-  <p class="text-xs items-center justify-center p-0 m-0">
-    {{ footerTitle }}
-  </p>
+<div
+  class="flex h-6 text-center justify-center bg-primary text-primary-contrast"
+>
+  <span>
+    {{ footerTitles }}
+  </span>
 </div>
