--- a/src/app/components/shared/layout/sidebar/sidebar-web-processes/sidebar-web-processes.component.html
+++ b/src/app/components/shared/layout/sidebar/sidebar-web-processes/sidebar-web-processes.component.html
@@ -7,7 +7,7 @@
       <p-card
         role="button"  
         styleClass="flex flex-col border-2 border-primary-emphasis shadow-[0px_0px_10px_rgba(0,0,0,0.5)] justify-between"
-        class="rounded-3xl text-center bg-zinc-50 dark:bg-zinc-800"
+        class="rounded-3xl text-justify bg-zinc-50 dark:bg-zinc-800"
       >
         <!-- Header -->
         <ng-template pTemplate="header">
