--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
   <app-support-button class="hidden lg:block"></app-support-button>
 
   <!-- Footer -->
-  <footer [class]="layoutUi.headerHeight" class="shrink-0 overflow-hidden">
+  <footer [class]="layoutUi.headerHeight" class="shrink-0">
     <app-mobile-tab-bar class="lg:hidden" />
     <app-footer class="w-full hidden lg:block" />
   </footer>
