--- a/src/app/components/forms/sequential-turns-management-form/sequential-turns-form/sequential-turns-form.component.html
+++ b/src/app/components/forms/sequential-turns-management-form/sequential-turns-form/sequential-turns-form.component.html
@@ -2,7 +2,7 @@
 <div class="w-full mb-4">
   <app-search-input
     class="w-full"
-    placeholder="بخشی از عنوان وارد کنید."
+    [placeholder]="'عنوان ' + appTitle.getPlaceholder('sequentialTurnTitle')"
     [staticData]="sequentialTurns"
     [itemMatchesQuery]="filterSequentialTurnGroup"
     [autoTriggerSearch]="true"
@@ -29,7 +29,7 @@
   <ng-template #caption>
     <div class="flex items-center justify-between">
       <app-button
-        label="جدید"
+        [label]="appTitle.buttons.add.addRecord"
         size="small"
         styleClass="px-6 md:px-8 py-1"
         (click)="onNew()"
@@ -41,7 +41,7 @@
   <ng-template #header let-columns>
     <tr>
       @for (col of columns; track $index) {
-      <th>{{ col }}</th>
+        <th>{{ col }}</th>
       }
     </tr>
   </ng-template>
