--- a/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
+++ b/src/app/components/forms/transport-companies-form/transport-companies-form.component.html
@@ -1,6 +1,6 @@
 <!-- جستجوی شرکت حمل و نقل -->
 <app-search-auto-complete
-  placeholder="قسمتی از نام را وارد نمایید"
+  [placeholder]="'نام ' + appTitle.getPlaceholder('transportCompanyTitle')"
   optionLabel="TCTitle"
   optionValue="TCTitle"
   [lazySearch]="searchTransportCompony"
@@ -18,8 +18,7 @@
     <!-- کد شرکت -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      label="کد شرکت"
-      placeholder="کد شرکت حمل و نقل"
+      [label]="appTitle.inputs.transportCompanies.transportCompanyId"
       [control]="TCId"
       [readOnly]="true"
       [addonWidth]="addonWidth"
@@ -28,8 +27,7 @@
     <!-- عنوان شرکت -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      placeholder="نام شرکت حمل و نقل"
-      label="عنوان"
+      [label]="appTitle.inputs.transportCompanies.transportCompanyName"
       [control]="TCTitle"
       [readOnly]="true"
       [addonWidth]="addonWidth"
@@ -38,8 +36,9 @@
     <!-- کد سازمانی -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      placeholder="کد سازمانی"
-      label="کد سازمانی"
+      [label]="
+        appTitle.inputs.transportCompanies.transportCompanyOrganizationId
+      "
       [control]="TCOrganizationCode"
       [readOnly]="true"
       [addonWidth]="addonWidth"
@@ -48,8 +47,7 @@
     <!-- شهر استقرار -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      placeholder="محل شهر استقرار"
-      label="عنوان شهر"
+      [label]="appTitle.inputs.transportCompanies.transportCompanyLocation"
       [control]="TCCityTitle"
       [readOnly]="true"
       [addonWidth]="addonWidth"
@@ -58,8 +56,8 @@
     <!-- تلفن -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      placeholder="تلفن"
-      label="تلفن"
+      [label]="appTitle.inputs.global.phoneNumber"
+      [placeholder]="appTitle.getPlaceholder('globalPhoneNumberPlaceholder')"
       [control]="TCTel"
       validationField="telephone"
       [addonWidth]="addonWidth"
@@ -68,8 +66,12 @@
     <!-- موبایل مدیر -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      label="موبایل مدیر"
-      placeholder="شماره موبایل مدیر"
+      [label]="
+        appTitle.inputs.transportCompanies.transportCompanyOwnerPhoneNumber
+      "
+      [placeholder]="
+        appTitle.getPlaceholder('transportCompanyOwnerPhoneNumber')
+      "
       validationField="mobile"
       [control]="TCManagerMobileNumber"
       [addonWidth]="addonWidth"
@@ -78,8 +80,8 @@
     <!-- نام و نام خانوادگی مدیر -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      label="مدیر عامل"
-      placeholder="نام و نام خانوادگی مدیر"
+      [label]="appTitle.inputs.transportCompanies.transportCompanyOwnerName"
+      [placeholder]="appTitle.getPlaceholder('transportCompanyOwnerName')"
       validationField="fullName"
       [control]="TCManagerNameFamily"
       [addonWidth]="addonWidth"
@@ -88,8 +90,8 @@
     <!-- ایمیل -->
     <app-text-input
       class="col-span-12 md:col-span-6"
-      placeholder="ایمیل"
-      label="آدرس ایمیل"
+      [label]="appTitle.inputs.global.email"
+      [placeholder]="appTitle.getPlaceholder('globalEmailPlaceholder')"
       validationField="email"
       [control]="EmailAddress"
       [addonWidth]="addonWidth"
@@ -98,7 +100,7 @@
     <!-- وضعیت -->
     <app-toggle-switch-input
       class="col-span-12 flex px-4"
-      label="وضعیت"
+      [label]="appTitle.toggleSwitches.status"
       [control]="Active"
     />
   </div>
@@ -110,7 +112,7 @@
     <app-button
       (click)="editTransportCompony()"
       [disabled]="transportComponyForm.invalid || loading()"
-      label="ویرایش اطلاعات"
+      [label]="appTitle.buttons.saveAndEdit"
       styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
     ></app-button>
 
@@ -118,7 +120,7 @@
       (click)="activateTransportComponySms()"
       [disabled]="TCId.invalid || loading()"
       severity="warn"
-      label="فعال سازی پیامک"
+      [label]="appTitle.buttons.activateSMS"
       styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
     ></app-button>
 
@@ -126,7 +128,7 @@
       (click)="confirmResetPassword()"
       [disabled]="TCId.invalid || loading()"
       severity="warn"
-      label="بروزرسانی رمزعبور"
+      [label]="appTitle.buttons.generateNewPassword"
       styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
     ></app-button>
   </div>
