--- a/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
+++ b/src/app/components/forms/truck-driver-manages-form/driver-info-form/driver-info-form.component.html
@@ -1,4 +1,4 @@
-<div class="p-fluid grid grid-cols-12  gap-6 relative">
+<div class="p-fluid grid grid-cols-12 gap-6 relative">
   <form
     class="col-span-12"
     [class.pointer-events-none]="loading"
@@ -9,26 +9,25 @@
       <app-search-input
         [control]="searchNationalId"
         validationField="nationalId"
-        icon="pi pi-id-card"
+        icon="pi pi-search"
         class="flex-1"
-        placeholder="جستجو براساس شماره ملی راننده"
-        searchButtonLabel="استعلام از سامانه"
+        [placeholder]="appTitle.getPlaceholder('userNationalCodePlaceholder')"
+        [searchButtonLabel]="appTitle.buttons.retrieveFromOutdoorSystem"
         [disableSearchButton]="this.searchForm.invalid"
         [onSearchQuery]="loadDriverInfoFromAPI"
       />
     </div>
   </form>
   <div
-    class="p-fluid grid grid-cols-12 col-span-12  gap-6 relative px-6"
+    class="p-fluid grid grid-cols-12 col-span-12 gap-6 relative px-6"
     [class.pointer-events-none]="loading"
     [class.opacity-60]="loading"
   >
     <div class="grid grid-cols-12 col-span-12 gap-4">
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="کد راننده"
+          [label]="appTitle.inputs.drivers.driverId"
           class="flex-1"
-          placeholder="کد راننده"
           [readOnly]="true"
           [control]="driverId"
           validationField="driverId"
@@ -38,9 +37,8 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="کدملی"
+          [label]="appTitle.inputs.users.userNationalCodeTitle"
           class="flex-1"
-          placeholder="کدملی راننده"
           [control]="nationalId"
           validationField="nationalId"
           [readOnly]="true"
@@ -50,9 +48,8 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="نام راننده"
+          [label]="appTitle.inputs.users.userNameAndLastName"
           class="flex-1"
-          placeholder="نام راننده"
           [control]="fullName"
           validationField="fullName"
           [readOnly]="true"
@@ -62,9 +59,9 @@
 
       <div class="col-span-12 md:col-span-6 relative">
         <app-text-input
-          label="شماره  تلفن"
+          [label]="appTitle.inputs.phoneNumbers.inputTitle"
           class="flex-1"
-          placeholder="شماره تلفن"
+          [placeholder]="appTitle.getPlaceholder('userPhoneNumberPlaceholder')"
           buttonIcon="pi pi-save"
           [control]="mobile"
           validationField="mobile"
@@ -76,9 +73,8 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="نام پدر"
+          [label]="appTitle.inputs.users.userFatherName"
           class="flex-1"
-          placeholder="نام پدر"
           [control]="fatherName"
           validationField="fatherName"
           [readOnly]="true"
@@ -88,9 +84,8 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="شماره گواهینامه"
+          [label]="appTitle.inputs.drivers.driverLicenseNumber"
           class="flex-1"
-          placeholder="شماره گواهینامه"
           [control]="licenseNumber"
           validationField="licenseNumber"
           [readOnly]="true"
@@ -100,9 +95,8 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="شماره هوشمند"
+          [label]="appTitle.inputs.drivers.driverSmartCardNumber"
           class="flex-1"
-          placeholder="شماره هوشمند"
           [control]="smartCard"
           validationField="smartCard"
           [readOnly]="true"
@@ -112,12 +106,11 @@
 
       <div class="col-span-12 md:col-span-6">
         <app-text-input
-          label="آدرس"
+          [label]="appTitle.inputs.global.address"
           class="flex-1"
-          placeholder="آدرس راننده"
+          [placeholder]="appTitle.getPlaceholder('globalAddressPlaceholder')"
           [control]="address"
           validationField="address"
-          [readOnly]="true"
           [addonWidth]="addonWidth"
         />
       </div>
@@ -131,7 +124,7 @@
         (click)="activateDriverSms()"
         [disabled]="this.driverForm.invalid || loading"
         severity="warn"
-        label="فعال سازی پیامک"
+        [label]="appTitle.buttons.activateSMS"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
 
@@ -139,7 +132,7 @@
         (click)="sendWebsiteLink()"
         [disabled]="this.driverForm.invalid || loading"
         severity="warn"
-        label="ارسال لینک سامانه"
+        [label]="appTitle.buttons.sendSystemLink"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
 
@@ -147,7 +140,7 @@
         (click)="resetDriverPassword()"
         [disabled]="this.driverForm.invalid || loading"
         severity="info"
-        label="ایجاد رمز عبور جدید"
+        [label]="appTitle.buttons.generateNewPassword"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
     </div>
