--- a/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
+++ b/src/app/components/forms/turns-management-form/real-time-turns-form/real-time-turns-form.component.html
@@ -3,7 +3,7 @@
 
   <div class="w-full md:flex md:justify-end my-5">
     <app-button
-      label="درخواست صدور نوبت"
+      [label]="appTitle.buttons.newTurnRequest"
       styleClass="my-2 md:my-0 px-6 text-xs md:text-sm lg:text-base w-full md:w-auto"
       [disabled]="sequentialTurnId.invalid"
       (click)="submitRealTimeTurn()"
