--- a/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
+++ b/src/app/components/forms/user-management-form/user-Info-form/user-info-form.component.html
@@ -5,17 +5,16 @@
     [class.opacity-60]="loading()"
     [formGroup]="searchForm"
   >
-    <!-- Search Phone + Refresh -->
     <div class="flex gap-2">
       <app-search-input
-        label="شماره موبایل"
         class="flex-1"
-        placeholder="جستجو کاربر"
+        icon="pi pi-search"
+        [placeholder]="appTitles.getPlaceholder('userPhoneNumberPlaceholder')"
         [control]="searchPhone"
         validationField="mobile"
         [disableSearchButton]="searchForm.invalid || loading()"
         [onSearchQuery]="fetchUserByPhone"
-        [addonWidth]="'8rem'"
+        [addonWidth]="'3rem'"
       />
     </div>
   </form>
@@ -33,27 +32,28 @@
         [readOnly]="true"
         [control]="getUserFormControl('id')"
         validationField="id"
-        placeholder="شناسه کاربر"
         icon="pi pi-id-card"
+        label="شناسه کاربری"
       />
-      <app-button
-        (click)="resetUserInfoForm()"
-        styleClass="rounded-full w-8 h-8"
-        [disabled]="getUserFormControl('id').invalid || loading()"
-        size="small"
-        severity="info"
-      >
-        <i class="pi pi-user-plus text-lg" iconPos="left"></i>
-      </app-button>
     </div>
+
+    <app-button
+      (click)="resetUserInfoForm()"
+      styleClass="rounded-full h-10"
+      [disabled]="getUserFormControl('id').invalid || loading()"
+      severity="info"
+    >
+      {{ appTitles.buttons.add.addUser }}
+    </app-button>
 
     <!-- Full Name -->
     <div class="col-span-12 md:col-span-6">
       <app-text-input
         validationField="fullName"
         icon="pi pi-user"
-        placeholder="نام کاربر"
+        [placeholder]="appTitles.getPlaceholder('userNamePlaceholder')"
         [control]="getUserFormControl('name')"
+        [label]="appTitles.inputs.users.userNameTitle"
       />
     </div>
 
@@ -61,10 +61,10 @@
     <div class="col-span-12 md:col-span-6">
       <div>
         <app-text-input
-          label="شماره موبایل"
+          [label]="appTitles.inputs.phoneNumbers.inputTitle"
           addonWidth="7rem"
           class="flex-1"
-          placeholder="شماره موبایل کاربر"
+          [placeholder]="appTitles.getPlaceholder('userPhoneNumberPlaceholder')"
           [control]="getUserFormControl('phone')"
         />
       </div>
@@ -73,9 +73,10 @@
     <!-- User Type -->
     <div class="col-span-12 md:col-span-6">
       <app-select-input
-        icon="pi pi-users"
         [control]="getUserFormControl('userType')"
         [options]="roles"
+        icon=""
+        [label]="appTitles.inputs.users.userTypesTitle"
       />
     </div>
 
@@ -83,7 +84,7 @@
     <div class="col-span-12 md:col-span-6 flex px-2">
       <app-toggle-switch-input
         [readonly]="true"
-        label="وضعیت پیامک"
+        [label]="appTitles.toggleSwitches.smsStatus"
         [control]="getUserFormControl('smsActive')"
       />
     </div>
@@ -91,7 +92,7 @@
     <!-- Radio: User Active -->
     <div class="col-span-12 md:col-span-6 flex px-2">
       <app-toggle-switch-input
-        label="کاربر"
+        [label]="appTitles.toggleSwitches.userStatus"
         [control]="getUserFormControl('userActive')"
       />
     </div>
@@ -103,7 +104,7 @@
       <app-button
         (click)="submitUserInfo()"
         [disabled]="userInfoForm.invalid || loading()"
-        label="ثبت و ویرایش"
+        [label]="appTitles.buttons.saveAndEdit"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
 
@@ -115,7 +116,7 @@
           loading()
         "
         severity="warn"
-        label="فعال سازی پیامک"
+        [label]="appTitles.buttons.activateSMS"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
 
@@ -123,7 +124,7 @@
         (click)="sendWebsiteLink()"
         [disabled]="getUserFormControl('id').invalid || loading()"
         severity="warn"
-        label="ارسال لینک سامانه"
+        [label]="appTitles.buttons.sendSystemLink"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
 
@@ -131,7 +132,7 @@
         (click)="resetUserPassword()"
         [disabled]="getUserFormControl('id').invalid || loading()"
         severity="info"
-        label="ایجاد رمز عبور جدید"
+        [label]="appTitles.buttons.generateNewPassword"
         styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
       ></app-button>
     </div>
