--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -35,14 +35,14 @@
     (click)="activateUserSms()"
     [disabled]="loading() || isUserSmsActivated || !userProfile()"
     severity="warn"
-    label="فعال سازی پیامک"
+    [label]="appTitle.buttons.activateSMS"
     styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
   ></app-button>
 
   <app-button
     (click)="confirmResetPassword()"
     [disabled]="loading() || !userProfile()"
-    label="ایجاد رمز عبور جدید"
+    [label]="appTitle.buttons.generateNewPassword"
     styleClass="my-2 md:my-0 text-xs md:text-sm lg:text-base w-full md:w-36 lg:w-40"
   ></app-button>
 
